@@ -1,6 +1,8 @@
 2024-12-30  Zhengyi Fu  <i@fuzy.me>
 
-	* init.el: Fix configuration of buffer-env
+	* init.el: Fix configuration of buffer-env,
+	Fix identation,
+	(+custom-faces): Highlight incorrect indentation
 
 2024-12-29  Zhengyi Fu  <i@fuzy.me>
 
